@@ -28,10 +28,14 @@ namespace KGySoft.Drawing.ImagingTools.ViewModel
     {
         #region Properties
 
-        internal Image Image { get => Get<Image>(); set => Set(value); }
+        internal Image OriginalImage { get => Get<Image>(); set => Set(value); }
+        internal Image PreviewImage { get => Get<Image>(); set => Set(value); }
+        internal Image DisplayImage { get => Get<Image>(); set => Set(value); }
         internal bool AutoZoom { get => Get(true); set => Set(value); }
         internal bool SmoothZooming { get => Get(true); set => Set(value); }
-        internal bool ButtonsEnabled { get => Get<bool>(); set => Set(value); }
+        internal bool ShowOriginal { get => Get<bool>(); set => Set(value); }
+        internal bool ZoomEnabled { get => Get<bool>(); set => Set(value); }
+        internal bool ShowOriginalEnabled { get => Get(true); set => Set(value); }
 
         #endregion
 
@@ -42,8 +46,23 @@ namespace KGySoft.Drawing.ImagingTools.ViewModel
         protected override void OnPropertyChanged(PropertyChangedExtendedEventArgs e)
         {
             base.OnPropertyChanged(e);
-            if (e.PropertyName == nameof(Image))
-                ButtonsEnabled = e.NewValue != null;
+            switch (e.PropertyName)
+            {
+                case nameof(PreviewImage):
+                    if (!ShowOriginal)
+                        DisplayImage = PreviewImage;
+                    return;
+                case nameof(OriginalImage):
+                    if (ShowOriginal)
+                        DisplayImage = PreviewImage;
+                    return;
+                case nameof(DisplayImage):
+                    ZoomEnabled = e.NewValue != null;
+                    return;
+                case nameof(ShowOriginal):
+                    DisplayImage = e.NewValue is true ? OriginalImage : PreviewImage;
+                    return;
+            }
         }
 
         #endregion
